@@ -5,6 +5,7 @@ No break in binary compatibily (no crash), but some details.
 0.7.72 --> 0.7.73
 -----------------
 - Clean aperture size is move from width/height to its own field
+- HEVC: format_Profile field changed from Profile@Level to Profile@Level@Tier
 
 0.7.71 --> 0.7.72
 -----------------
